correction mobile version

--- a/LojaFresno/css/elements/header.css
+++ b/LojaFresno/css/elements/header.css
@@ -121,7 +121,6 @@
 }
 
 .level1 {
-    background: pink;
     width: 100%;
     text-align: center;
 }
