--- a/LojaFresno/css/elements/home.css
+++ b/LojaFresno/css/elements/home.css
@@ -17,13 +17,6 @@ body {
     margin-right: 0;
 }
 
-.nospacing {
-    padding-left: 15px;
-    padding-right: 10px;
-    margin-left: 0;
-    margin-right: 0;
-}
-
 .imgBannerEx3 {
     width: 100%;
     margin: 0;
@@ -48,6 +41,12 @@ body {
         border: 1.4px solid #000;
         margin: 10px 11px 10px 2px;
     }
+    .nospacing {
+        padding-left: 15px;
+        padding-right: 10px;
+        margin-left: 0;
+        margin-right: 0;
+    }
 }
 
 @media (max-width: 768px) {
@@ -56,6 +55,12 @@ body {
         border: 1.4px solid #000;
         margin: 10px -2px 10px 2px;
     }   
+    .nospacing {
+        padding-left: 0px;
+        padding-right: 0px;
+        margin-left: 0;
+        margin-right: 0;
+    }
 }
 
 @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
@@ -242,13 +247,19 @@ body {
 }
 
 .paginateCatalog {
-    float: right;
+    position: absolute;
+    right: 0;
     font-size: 10pt;
-    margin-top: 8px;
 }
-
-.paginateCatalogtop {
-    float: right;
+@media (min-width: 768px) {
+    .paginateCatalog {
+        margin-top: 10px;
+    }
+}
+@media (max-width: 768px) {
+    .paginateCatalog {
+        margin-top: -30px;
+    }
 }
 
 .page-catalog .page-link.page-current {
@@ -305,7 +316,27 @@ body {
     #BannerMobile{
         top:145px;
     }
+    
     .bannerHomeMobile button.slick-prev, .bannerHomeMobile button.slick-next {
         display: none !important;
     }
+    
+    .col-xs-4, .col-sm-4, .col-md-7, .col-md-5, .col-md-4, .col-sm-5, .col-sm-12{
+        padding: 0;
+    }
+    .topCategory {
+        min-width: 100%; 
+        padding: 0;
+    }
+    .page-catalog .catalog-header, .page-search .catalog-header {
+        padding-left: 0px;
+    }
+    .level1 {
+        text-align: left;
+    }
+    
+    #CadastroAbas>li, #ProdAbas .aberta, #ProdAbas li {
+        display: block !important;
+    }
+
 }
